[gd_scene load_steps=5 format=2]

[ext_resource path="res://Others/Music/title_menu.wav" type="AudioStream" id=1]
[ext_resource path="res://Others/SFX/menu_confirm.wav" type="AudioStream" id=2]
[ext_resource path="res://Others/SFX/menu_select.wav" type="AudioStream" id=3]
[ext_resource path="res://Others/AudioPlayer.gd" type="Script" id=4]

[node name="AudioPlayer" type="Node"]
pause_mode = 2
script = ExtResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true
bus = "Music"

[node name="Effects" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = "Effects"

[node name="Interface" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = "Interface"

[node name="ButtonHoverAudioStreamPlayer" type="AudioStreamPlayer" parent="Interface"]
stream = ExtResource( 3 )
bus = "Interface"

[node name="ButtonClickAudioStreamPlayer" type="AudioStreamPlayer" parent="Interface"]
stream = ExtResource( 2 )
bus = "Interface"

[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
